--- a/OuFood/app/src/main/res/layout/activity_edit_phone_user.xml
+++ b/OuFood/app/src/main/res/layout/activity_edit_phone_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.EditPhoneUserFragment">
+    tools:context=".Activity.EditPhoneUserActivity">
 
     <ImageView
         android:layout_width="match_parent"
@@ -17,28 +17,33 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="wrap_content">
 
-            <TextView
+            <ImageView
+                android:id="@+id/button_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Cập nhật số điện thoại"
-                android:textSize="30sp" />
+                android:padding="12dp"
+                android:src="@drawable/back_button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/btn_luu"
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="10dp"
-                android:gravity="center"
-                android:text="Lưu"
-                android:textColor="@color/gray" />
+                android:layout_height="wrap_content"
+                android:text="Cập nhật số điện thoại"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,6 +83,17 @@
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_luu"
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button_rounded"
+            android:text="Lưu"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
