--- a/OuFood/app/src/main/res/layout/activity_food_detail.xml
+++ b/OuFood/app/src/main/res/layout/activity_food_detail.xml
@@ -63,10 +63,18 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="đ"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/blue"
+                    android:layout_marginEnd="2dp"/>
+                <TextView
                     android:id="@+id/food_price_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0Đ"
+                    android:text="0"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -191,15 +199,27 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="đ"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView20"
+            app:layout_constraintTop_toBottomOf="@+id/textView20"></TextView>
+
+        <TextView
             android:id="@+id/textView_priceTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="0đ"
+            android:text="0"
+            android:layout_marginStart="2dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/textView20"
-            app:layout_constraintTop_toBottomOf="@+id/textView20" />
+            app:layout_constraintBottom_toBottomOf="@id/textView10"
+            app:layout_constraintStart_toEndOf="@+id/textView10"
+            app:layout_constraintTop_toTopOf="@+id/textView10" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_cart"
